--- a/imr/imrviz/templates/example.html
+++ b/imr/imrviz/templates/example.html
@@ -30,6 +30,6 @@
 	 <script src="{% static "imr/js/jquery.js" %}"></script>
     <script src="{% static "imr/js/jquery-ui-1.8.24.custom.min.js" %}"></script>
     <script src="{% static "imr/js/d3.v2.min.js" %}"></script>
-    <script src="{% static "imr/js/ignis.js" %}"></script>
+    <!--<script src="{% static "imr/js/ignis.js" %}"></script>-->
 
     {% endblock %}
