--- a/imr/imrviz/templates/home.html
+++ b/imr/imrviz/templates/home.html
@@ -17,7 +17,7 @@
 	
 
 	<div class="col-md-6 choice">
-		<h3>Submit your own data</h3>
+		<h3><a href="/viz/form">Submit your own data</a></h3>
 		<p>Build your own visualization by submitting data related to a custom space, or load a file of a previously inserted scenario. </p>
 	</div>
 
@@ -34,7 +34,7 @@
 
 	
 	<div class="col-md-6 choice">
-	<img src="{% static "imr/img/tool_submit.png" %}"/>
+	<a href="/viz/form"><img src="{% static "imr/img/tool_submit.png" %}"/></a>
 	</div>
 
 	
