--- a/imr/imrviz/templates/base.html
+++ b/imr/imrviz/templates/base.html
@@ -12,6 +12,8 @@
 <div id="wrap">
 
 <link rel="stylesheet" type="text/css" href="{% static "imr/css/style.css" %}" />
+<link rel="stylesheet" href="{% static "imr/css/sample-style.css" %}" type="text/css" />
+<link rel="stylesheet" href="{% static "imr/css/d3-bootstrap-plugins.min.css" %}" type="text/css" />
 
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
       <div class="container">
