commit after home work

--- a/imr/imr/static/admin/css/style.css
+++ b/imr/imr/static/admin/css/style.css
@@ -19,3 +19,8 @@ background-color:#FFF;
 .module h2, .module caption, .inline-group h2 {
 	background:#222;
 }
+#team.img{
+	max-width:100px;
+	height:auto;
+	margin-right:5px;
+}
