--- a/imr/imrviz/templates/home.html
+++ b/imr/imrviz/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %}<h1 class="center"><b>REFORME</b> / THE GLOBAL ENERGY SIMULATOR</h1>{% endblock %}
+{% block title %}REFORME / The global energy simulator{% endblock %}
 
 {% block content %}
 
@@ -29,12 +29,12 @@
 
 
 	<div class="col-md-6 choice">
-	<a href="/viz/example"><img src="{% static "imr/img/tool_example.png" %}"/></a>
+	<a href="/viz/example"><img src="{% static "imr/img/sample.jpg" %}"/></a>
 	</div>
 
 	
 	<div class="col-md-6 choice">
-	<a href="/viz/form"><img src="{% static "imr/img/tool_submit.png" %}"/></a>
+	<a href="/viz/form"><img src="{% static "imr/img/form.jpg" %}"/></a>
 	</div>
 
 	
