--- a/imr/imrviz/templates/team.html
+++ b/imr/imrviz/templates/team.html
@@ -7,7 +7,7 @@
 <h4>People and Organizations</h4>
 <p><b>Raphaël Ménard</b>, responsable scientifique, Elioth</p>
 <p><b>Maurizio Brocato</b>, responsable institutionnel, Ensa Paris-Malaquais, GSA </p>
-<p><b>Paolo Ciucarelli</b>, DensityDesign Lab</p>
+<p><b>Paolo Ciuccarelli</b>, DensityDesign Lab</p>
 <p><b>Yves Cochet</b> </p>
 <p><b>Alain Dervieux</b>, ENSAPB et ENSPV</p>
 
