--- a/imr/imrviz/static/imr/css/vizstyle.css
+++ b/imr/imrviz/static/imr/css/vizstyle.css
@@ -100,7 +100,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 	margin: 0;
 }
 body {
-	background: #fefefe;
+	background: #fdfdfd;
 }
 h2, .title {
 	color: #808080;
