--- a/imr/imrviz/static/imr/css/vizstyle.css
+++ b/imr/imrviz/static/imr/css/vizstyle.css
@@ -57,7 +57,8 @@ svg {
 	text-transform: uppercase;
 }
 #controls {
-	width: 1200px;
+	width: 100%;
+	position:relative;
 	margin: 0 auto;
 	clear: both;
 	height: 40px;
@@ -106,4 +107,20 @@ h2, .title {
 	color: #808080;
 	fill: #808080;
 	font-size: 2em;
+	float:left;
+
+}
+.legend-img{
+	position:absolute;
+	top:0;
+	right:0;
+	float:right;
+	display:block;
+	width:22%;
+	height:auto;
+	border:1px solid gray;
+	background:white;
+}
+#title{
+		position:relative;
 }
