--- a/imr/imrviz/static/imr/css/sample-style.css
+++ b/imr/imrviz/static/imr/css/sample-style.css
@@ -1,4 +1,4 @@
-body{color:#222;font-family: sans-serif;font-size:12px;line-height:14px;}
+body{color:#222;font-family: "Lato",sans-serif;font-size:12px;line-height:14px;}
 input{
 	border-radius: 3px;
 border: 1px solid #ddd;
@@ -43,15 +43,17 @@ a {
 	display: inline-block;
 }
 
+text{font-family:"Lato", sans-serif;}
+
 svg{display:block; margin:0 auto;}
-.space-name{font-weight: bold;text-transform: uppercase;}
+.space-name, .sect-name, .trend-name{font-weight: bold;text-transform: uppercase;}
 #controls{width:1200px; margin:0 auto; clear:both;height:40px; margin-top:20px;}
 #buttons{width:auto; float:right;}
 .but{margin-left:5px;padding:5px 10px; background-color:#f8f8f8;border:1px solid gray;text-decoration: none;color:gray;}
 .active{color:black;font-weight:bold;}
 #years{float:left;}
 .axis path,.axis line {fill: none; stroke: gray; shape-rendering: crispEdges;}
-.axis text {font-family: sans-serif;font-size: 10px;color:gray;}
+.axis text {font-size: 10px;color:gray;}
 .vizspace{display: none;}
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
